fix capabilities blurb on tablet sizes

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -823,6 +823,12 @@ nav {
 	float:left;
 	margin-left: 20px;
 
+	@include breakpoint(tablet) {
+
+		width:100%;
+
+	}
+
 	@include breakpoint(medium) {
 
 		width:100%;
